Finish chpt 3, Color and sizing

--- a/index.html
+++ b/index.html
@@ -5,16 +5,42 @@
     <title>Test Page: Don't Panic</title>
     <style>
       /* GLOBAL STYLES */
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+      h1 {
+        font-size: 2em;
+        margin-top: 0;
+      }
       a {
-        color: red;
+        color: #f00;
+      }
+      /* HERO STYLES */
+      .full-hero {
+        background-color: #c7dbfc;
+        height: 50vh;
+        width: 75vw;
       }
       /* SOCIAL STYLES */
       .social-link {
+        background: rgba(150, 150, 150, 0.5);
         color: blue;
       }
       /* BIO STYLES */
+      .bio-wrapper {
+
+      }
       .bio-box {
         border: 1px solid black;
+        font-size: 1rem;
+        width: 50%;
+      }
+      .bio-box h3 {
+        font-size: 1.5em;
+      }
+      .bio-copy {
+        font-size: 1em;
       }
       .bio-copy a {
         color: green;
@@ -22,20 +48,22 @@
     </style>
   </head>
   <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="https://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="https://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="https://example.com/">Link</a>
-      </li>
-    </ul>
+    <div class="full-hero hero-home">
+      <h1>I'm an h1</h1>
+      <ul>
+        <li>
+          <a href="https://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="https://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="https://example.com/" class="social-link">Link</a>
+        </li>
+      </ul>
+    </div>
     <h2>I'm an h2</h2>
-    <div class="bio-box">
+    <div class="bio-wrapper"><div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="https://twitter.com/mhartl" class="social-link">here</a>
       <div class="bio-copy">
@@ -61,6 +89,6 @@
       <div>
         The Future
       </div>
-    </div>
+    </div></div>
   </body>
 </html>
